# langchain_practice

./: .gitignore  README.md  pyproject.toml
docs/: langchain-study-plan.md  roadmap-java-to-ai.md
examples/: 01_prompt_chain.py  02_chat_memory.py  03_rag_faiss.py  04_agent_tools.py  05_model_learning.py  06_rag_agent.py
src/lc_learning/: __init__.py  config.py  embeddings.py  llm.py
tests/: test_project_imports.py
